Finish Topic Management

--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Content/assets/AdminManager.css
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Content/assets/AdminManager.css
@@ -4,6 +4,9 @@
 .alert-info {
     background-color: #d1ecf1 !important;
 }
+.alert-danger {
+    background-color: #f8d7da !important;
+}
 .myTable-info-tr > td {
     border-bottom: 1px solid lightseagreen;
     color: black;
@@ -15,4 +18,10 @@
 .right-conner {
     font-weight: bold;
     text-align: right;
+}
+.title-containt{
+    text-align: center ;
+}
+#Edit-page{
+    padding-bottom: 0px;
 }
