--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/AdminTopicManager/Details.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/AdminTopicManager/Details.cshtml
@@ -25,7 +25,7 @@
         <div>
             <div class="btn-containt">
                 @Html.ActionLink("Back ", "Index", null, new { @class = "btn btn-info" })
-                @Html.ActionLink("Edit", "Edit", new { id = Model.Topic_Title }, new { @class = "btn btn-success" })
+                @Html.ActionLink("Edit", "Edit", new { title = Model.Topic_Title }, new { @class = "btn btn-success"})
             </div>
             <div class="dl-horizontal">
                 <div class="Banner-title-info" style="text-align:center">
