--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Index.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Index.cshtml
@@ -30,8 +30,11 @@
     @foreach (var item in Model)
     {
         <tr>
-            <td>
+            @*<td>
                 @Html.Raw(item.Topic_Title)
+            </td>*@
+            <td class="topic-title">
+                @item.Topic_Title
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Report)
@@ -47,8 +50,57 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Topic_Title }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Topic_Title })
+                @*@Html.ActionLink("Delete", "Delete", new { id = item.Topic_Title })*@
+                <button type="button" class="btn btn-danger btn-control btnDelete" data-toggle="modal" data-target="#myModal">Delete</button>
             </td>
         </tr>
     }
 </table>
+@*day la phan them moi vao luc 17h50' ngay 17/07*@
+<!-- The Modal -->
+<div class="modal" id="myModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            @using (Html.BeginForm("Delete", "Topics", FormMethod.Get))
+            {
+                        <!--Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title" id="M-title">Delete Topic</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                        <!-- Modal body -->
+                <div class="modal-body">
+                    Are You Sure to Delete This Topic ?<br />
+                    <input name="title" type="text" value="" style="border: 0; width: 100%; max-width: 100%; height: 50px; background: white;" disabled />
+                </div>
+                        <!-- Modal footer -->
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary" value="Delete">Delete</button>
+                            <button type="button" class="btn btn-danger" data-dismiss="modal">Cancle</button>
+                        </div>
+            }
+        </div>
+    </div>
+</div>
+@section Scripts{
+    <script>
+        $(".btnDelete").click(function () {
+            // Lay cai row hien tai dang chua btnDelete
+            let row = $(this).parents('tr');
+            // Lay title cua cai topic trong cai row nay
+            let title = $(row).find('.topic-title').text();
+            // Dua len modal (Thua! hoi bos di)
+            $('#myModal [name="title"]').val(title);
+        });
+
+        $('#myModal form').on('submit', function () {
+            $('[name="title"').prop('disabled', false);
+            window.location.reload();
+        });
+    </script>
+}
+    @*day la phan them moi vao luc 17h50' ngay 17/07*@
+
+
+
+
