--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/AdminIndex/ListPost.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/AdminIndex/ListPost.cshtml
@@ -10,6 +10,6 @@
         </div>
     </div>
     <div class="card-body">
-        <a href="#" class="btn btn-success">View Details</a>
+        <a href="@Url.Action("Index", "AdminPostManager")" class="btn btn-success">View Details</a>
     </div>
 </div>
