--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/AdminTopicManager/Edit.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/AdminTopicManager/Edit.cshtml
@@ -15,7 +15,8 @@
     <div class="btn-group btn-breadcrumb breadcrumb-primary">
         <a href="@Url.Action("Index", "AdminIndex")" class="btn btn-primary"><img src="~/Image/Logo_Icon/home-50.png" class="navbar-logo" alt="Site Logo" /></a>
         @Html.ActionLink("Home", "Index", "AdminIndex", null, new { @class = "btn btn-primary breadcrumb-link" })
-        <div class="btn btn-info c-info breadcrumb-link"> Topic </div>
+        @Html.ActionLink("Topic", "Index", "AdminTopicManager", null, new { @class = "btn btn-primary breadcrumb-link" })
+        <div class="btn btn-info c-info breadcrumb-link"> @Model.Topic_Title </div>
     </div>
 </div>
 <!-- Information -->
