--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/Information.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/Information.cshtml
@@ -78,7 +78,7 @@
                 }
                 else
                 {
-                   <img src="~/Image/avatar/@accountItem.Avatar"/>
+                   <img style="width:200px;" src="~/Image/avatar/@accountItem.Avatar"/>
                 }
             </div>
         }
