--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/EditInformation.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/EditInformation.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="container pt-5">
-    @using (Html.BeginForm("EditInformation", "UserAccount", FormMethod.Post, new { @class = "well form-horizontal col-md-6 col-sm-12 form-register", enctype ="multipart/form-data"}))
+    @using (Html.BeginForm("EditInformation", "UserAccount", FormMethod.Post, new { @class = "well form-horizontal col-md-6 col-sm-12 form-register" , enctype ="multipart/form-data"}))
     {
         <legend><center><h2><b>@ViewBag.Title</b></h2></center></legend><br>
 
@@ -93,11 +93,11 @@
         <div class="form-group">
             <div class="col-md inputGroupContainer">
                 @Html.LabelFor(Model => Model.Avatar , new { htmlAttribute = new { @class = "form-control col-12" } })
-                @*<div class="col-md-10">
+                <div class="col-md-10">
                     <input type="file" name="filehinh"/>
                     @ViewBag.ErrorUpImage
-                </div>*@
-                <input type="file" name="filehinh" id="filehinh" accept=".jpg,.png,.jpeg,gif" />
+                </div>
+                @*<input type="file" name="filehinh" id="filehinh" accept=".jpg,.png,.jpeg,gif" />*@
             </div>
         </div>
                 if (Model.Role == "D")
