--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Index.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Index.cshtml
@@ -85,7 +85,7 @@
     </div>
 </div>
 @section Scripts{
-    @Scripts.Render("~/Scripts/myScript.js")
+    @Scripts.Render("~/Scripts/Myscripts.js")
 
 }
 
