--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/ForgetPassword.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/ForgetPassword.cshtml
@@ -20,6 +20,6 @@
     </div>
 
     <div class="form-group pt-2 text-right">
-        <button type="submit" class="btn btn-default teal">Save changes</button>
+        <button type="submit" class="btn btn-default teal">Submit</button>
     </div>
 }
