--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/ForgetPasswordAddNewPass.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/ForgetPasswordAddNewPass.cshtml
@@ -11,7 +11,7 @@
     <hr />
     
     <div class="card p-5 col-md-4 m-auto">
-        <label for="old_password" class="label-text ">PhoneNumber: XXXXXXXX@(rsphone)</label>
+        <label for="old_password" class="label-text ">PhoneNumber: XXXXXXXXXXX@*@(rsphone*@</label>
         @using (Html.BeginForm("ForgetPasswordAddNewPass", "UserAccount", FormMethod.Post, new { @class = "well form-horizontal  " }))
         {
             <div class="form-group d-none">
