--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Edit.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Edit.cshtml
@@ -98,7 +98,7 @@
             <div class="col-md-offset-2 col-md-10">
                 @*<input type="submit" value="Save" class="btn btn-default"/>*@
                 <button type="submit" class="btn btn-info" >Save</button>
-                @Html.Raw("<a data-modal='' href='/Topics/Index/ ' title='Edit'> <span class='btn btn-danger'>Back to List</span> </a>")
+                @Html.Raw("<a @*data-modal=''*@ href='/Topics/Index/ ' title='Edit'> <span class='btn btn-danger'>Back to List</span> </a>")
             </div>
         </div>
     </div>
