--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Posts/_PartialEdit.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Posts/_PartialEdit.cshtml
@@ -10,9 +10,7 @@
 </style>
 <!--Header-->
 <div class="modal-header TopicTitle">
-    <h5 class="modal-title">
-       @Html.TextBoxFor(model => model.Topic_Tile, new { @class = "" , disabled = "disabled" })
-    </h5>
+    <h5 class="modal-title">Edit Post</h5>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
@@ -20,46 +18,38 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
     <div class="form-horizontal">
- @*<h4>Post</h4>*@
         <div class="modal-body">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.Post_ID)
-
-            <div class="form-group row invisible">
+            <div class="form-group row ">
                 @Html.LabelFor(model => model.Topic_Tile, "Topic_Tile", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.TextBoxFor(model => model.Topic_Tile, new { htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
-
             <div class="form-group row invisible">
                 <div class="col-sm-10">
                     @Html.TextBoxFor(model => model.Acc_ID, new { @Value = 1, htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
-
             <div class="form-group">
                 @Html.LabelFor(model => model.Post_Info, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Post_Info, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.TextAreaFor(model => model.Post_Info, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Post_Info, "", new { @class = "text-danger" })
                 </div>
             </div>
-
             <div class="form-group invisible">
                 <div class="col-md-10">
                     @Html.TextBoxFor(model => model.Like_Num, new { @Value = 0, htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
-
             <div class="form-group invisible">
                 <div class="col-md-10">
                     @Html.TextBoxFor(model => model.Dislike_Num, new { @Value = 0, htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
-
             <div class="form-group invisible">
                 <div class="col-md-10">
                     @{
@@ -76,7 +66,6 @@
             </div>
         </div>
 }
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
