--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Index/TopicDetail.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Index/TopicDetail.cshtml
@@ -12,7 +12,7 @@
             <a href="@Url.Action("Index", "Index")" class="btn btn-primary breadcrumb-link ">Home</a>
             @Html.ActionLink(Topic.Category.Group_Name, "ListGroup", new { Group_name = Topic.Category.Group_Name }, new { @class = "btn btn-primary breadcrumb-link " })
             @Html.ActionLink(@Topic.Category.Category_Name, "ListCategories", new { Category_Name = @Topic.Category.Category_Name }, new { @class = "btn btn-primary breadcrumb-link " })
-            <div class="btn btn-info c-info breadcrumb-link"> @Topic.Topic_Title </div>
+            <div class="btn btn-info c-info breadcrumb-link" id="breadcrumb-topicTitle"> @Topic.Topic_Title </div>
         </div>
     </div>
     <!--- End Breadcrumb -->
@@ -37,19 +37,22 @@
             @Html.Raw(Topic.Topic_Info)
         </div>
         <div class="separate-containt position-relative">
-            @Html.ActionLink("Add Post", "_PartialCreate","Posts", new { Topic_Title = Topic.Topic_Title }, new { @class = "btn btn-warning add-post-btn " })
+            @Html.ActionLink("Add Post", "_PartialCreate", "Posts", new { Topic_Title = Topic.Topic_Title }, new { @class = "btn btn-warning add-post-btn " })
         </div>
         @foreach (var listPost in Topic.Posts)
         {
             <div class="alert alert-primary" id="topic-containt">
                 @if (listPost.Acc_ID == 4)
                 {
-                    <div class="edit-btn">
-                        <img src="~/Image/Logo_Icon/edit-48.png" class="" alt="Responsive image">
-                        <!--  get Post_ID -->
-                        @{
-                            int Post_ID = @listPost.Post_ID;
-                        }
+                    <div class="edit-btn dropdown">
+                        <a class="dropdown-toggle edit-btn-href" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <img src="~/Image/Logo_Icon/edit-48.png" />
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
                     </div>
                 }
                 <div class="header-containt" id="topic-header-containt">
@@ -70,4 +73,10 @@
         }
     </div>
 }
-<script src="~/Scripts/MyScript/indexFunction.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+@section Scripts {
+    <script src="~/Scripts/MyScript/indexFunction.js"></script>
+    <script type="text/javascript">
+        $('.dropdown-toggle').dropdown()
+    </script>
+}
