--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Create.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Create.cshtml
@@ -1,13 +1,7 @@
 ﻿@model Dr4rum_eProjectIII.Models.Topic
-@{
-    ViewBag.Title = "Create";
-}
 <style>
     .hide {
-        display:none
-    }
-    .stitle{
-        color: blue;
+        display: none
     }
 </style>
 
@@ -19,12 +13,12 @@
     </h2>
     <hr />
     <div class="form-horizontal">
-        
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Topic_Title, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Topic_Title, new { htmlAttributes = new { @class = "form-control" , id = "title"} })
+                @Html.EditorFor(model => model.Topic_Title, new { htmlAttributes = new { @class = "form-control", id = "title" } })
                 @Html.ValidationMessageFor(model => model.Topic_Title, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -32,7 +26,6 @@
             @Html.LabelFor(model => model.Acc_ID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.TextBoxFor(model => model.Acc_ID, new { @Value = 1, htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Acc_ID, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -49,14 +42,13 @@
             <div class="col-md-10">
                 <div class="checkbox">
                     @Html.CheckBoxFor(model => model.setV, new { @checked = "checked", htmlAttributes = new { @class = "form-control" } })
-                    @*@Html.ValidationMessageFor(model => model.setV, "", new { @class = "text-danger"})*@
                 </div>
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Topic_Info, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-12">
                 @Html.TextAreaFor(model => model.Topic_Info)
                 @Html.ValidationMessageFor(model => model.Topic_Info, "", new { @class = "text-danger" })
             </div>
@@ -66,7 +58,6 @@
             @Html.LabelFor(model => model.Report, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.TextBoxFor(model => model.Report, new { @Value = 0, htmlAttributes = new { @class = "form-control" }, disabled = "disabled" })
-                @*@Html.ValidationMessageFor(model => model.Report, "", new { @class = "text-danger" })*@
             </div>
         </div>
 
@@ -75,50 +66,40 @@
             <div class="col-md-10">
                 @{
                     DateTime currentdate = DateTime.Now;
+                    var currDay = currentdate.ToString("dd/MM/yyyy");
                 }
-                @Html.TextBoxFor(model => model.date, new { @Value = currentdate, htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+                @Html.TextBoxFor(model => model.date, new { @Value = currDay, htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
                 @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="col-md-10">
             <!-- Button to Open the Modal -->
-            @*<button type="button" style="background-color: skyblue; font:bold" class="btn btn-primary" id="btnmodal" data-toggle="modal" data-target="#myModal">Create </button>*@
             <button type="button" class="btn btn-info" id="btnmodal" data-toggle="modal" data-target="#myModal">Create</button>
             @Html.Raw("<a data-modal='' href='/Topics/Index/ ' title='Edit'> <span class='btn btn-danger'>Back to List</span> </a>")
         </div>
-            <!-- The Modal -->
-            <div class="modal" id="myModal">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-
-                        <!-- Modal Header -->
-                        <div class="modal-header">
-                            <h4 class="modal-title" id="M-title">Modal Heading</h4>
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        </div>
-
-                        <!-- Modal body -->
-                        <div class="modal-body">
-                            The title of topic is unique. After you posted, you will can not edit. Are you sure you want to post?
-                        </div>
-
-                        <!-- Modal footer -->
-                        <div class="modal-footer">
-                            <input type="submit" style="background-color:deepskyblue" value="Sure" class="btn btn-default" />
-                            <button type="button" class="btn btn-danger" data-dismiss="modal">Cancle</button>
-                        </div>
-
+        <!-- The Modal -->
+        <div class="modal" id="myModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="M-title">Modal Heading</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        The title of topic is unique. After you posted, you will can not edit. Are you sure you want to post?
+                    </div>
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <input type="submit" style="background-color:deepskyblue" value="Sure" class="btn btn-default" />
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancle</button>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 }
-
-
-
-<div class="col-md-10">
-    
-</div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
     <script src="~/Content/ckeditor/ckeditor.js"></script>
@@ -128,7 +109,7 @@
         if (editor) { editor.destroy(true); }
         CKEDITOR.replace('Topic_Info', { enterMode: CKEDITOR.ENTER_BR, });
         CKFinder.setupCKEditor(null, '@Url.Content("~/Content/ckfinder/")');
-        
+
         $("#btnmodal").click(function () {
             $("#M-title").text("")
             $("#M-title").text($("#title").val())
