--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Index.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Index.cshtml
@@ -1,68 +1,62 @@
 ﻿@model IEnumerable<Dr4rum_eProjectIII.Models.Topic>
-<style>
-    .btmartop {
-        margin-top: 10px;
-    }
-</style>
-@{
-    ViewBag.Title = "List of Topic";
-}
+<link rel="stylesheet" type="text/css" href="~/Content/assets/TopicPost.css">
+<!--scroll-top-Button-->
+<button onclick="topFunction()" id="scroll-top-Btn" title="Go to top">Top</button>
+<!-- Banner-->
+<img src="~/Image/Banner_Pic/User/index_banner.jpg" class="img-fluid" alt="Responsive image">
+<!-- breadcrumb-->
+<div class="breadcrumb-containt">
+    <div class="btn-group btn-breadcrumb breadcrumb-primary">
+        <a href="@Url.Action("Index", "Index")" class="btn btn-primary"><img src="~/Image/Logo_Icon/home-50.png" class="navbar-logo" alt="Site Logo" /></a>
+        <a href="@Url.Action("Index", "Index")" class="btn btn-primary breadcrumb-link ">Home</a>
+        @Html.ActionLink("UserName", "ListGroup", new { }, new { @class = "btn btn-primary breadcrumb-link" })
+        <div class="btn btn-info c-info breadcrumb-link"> List Topic </div>
+    </div>
+</div>
+<!-- main info-->
+<div class="index-list-containt">
+    <div class="index-list">
+        <h2>Name's List Topic</h2>
+        @Html.ActionLink("Add Topic", "Create", "Topics", null, new { @class = "add-topic-btn btn-success", @id = "TopicIndex-btnAdd" })
+        <div class="main-containt ">
+            <div class="alert alert-warning  category-topic-titleContaint">
+                <div class="title-topicTitle" id="TopicIndex-title">
+                    Topic Title
+                </div>
+                <div class="title-topicDay">
+                    Date Created
+                </div>
+                <div class="title-topicPostnum" id="TopicIndex-postnum">
+                    Post Num
+                </div>
+                <div class="title-topicPoster" id="TopicIndex-btnControl">
+                    Button Control
+                </div>
+            </div>
+            @foreach (var item in Model)
+            {
+                <div class="category-topic-info ">
+                    <div class="info-topicTitle">
+                        @item.Topic_Title
+                    </div>
+                    <div class="info-topicDay">
+                        @item.date.ToString("dd/MM/yyy")
+                    </div>
+                    <div class="info-topicPostnum" id="TopicIndex-postnum">
+                        @item.Posts.Count()
+                    </div>
+                    <div class="title-topicPoster" id="TopicIndex-btnControl">
+                        @Html.ActionLink("Edit", "Edit", "Topics", new { id = item.Topic_Title }, new { @class = "btn btn-success btn-control" })
 
-<p class="btmartop">
-    @Html.Raw("<a @*data-modal=''*@ href='/Topics/Create/' title='Create'> <span class='btn btn-info'>Create new</span> </a>")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Topic_Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Report)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.date)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Account.UserName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Category.Category_Name)
-        </th>
-        <th></th>
-    </tr>
+                        @Html.Raw("<a data-modal='' href='/Topics/_PartialDelete/" + item.Topic_Title + "' id='" + item.Topic_Title + "' title='Delete'> <span class='btn btn-danger btn-control'>Delete</span> </a>")
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</div>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Topic_Title)
-            </td>
-            @*<td class="topic-title">
-                    @item.Topic_Title
-                </td>*@
-            <td>
-                @Html.DisplayFor(modelItem => item.Report)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Account.UserName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category.Category_Name)
-            </td>
-            <td>
-                
-                @Html.Raw("<a @*data-modal=''*@ href='/Topics/Edit/" + item.Topic_Title + "' id='" + item.Topic_Title + "' title='Edit'> <span class='btn btn-info'>Edit</span> </a>")
-
-                @Html.Raw("<a data-modal='' href='/Topics/_PartialDelete/" + item.Topic_Title + "' id='" + item.Topic_Title + "' title='Delete'> <span class='btn btn-info'>Delete</span> </a>")
-            </td>
-        </tr>
-    }
-</table>
-<!-- modal placeholder-- nhu vay la du het roi ma. sau k the hien partialv/ Meo biet nua, hoi thanh' xem
-    -->
+<!-- modal placeholder -->
 <div id='myModal' class='modal fade in'>
     <div class="modal-dialog">
         <div class="modal-content">
@@ -72,53 +66,8 @@
 </div>
 @section Scripts{
     @Scripts.Render("~/Scripts/myScript.js")
-
+    <script src="~/Scripts/MyScript/indexFunction.js"></script>
 }
-
-@*day la phan them moi vao luc 17h50' ngay 17/07*@
-<!-- The Modal -->
-@*<div class="modal" id="myModal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                @using (Html.BeginForm("Delete", "Topics", FormMethod.Get))
-                {
-                            <!--Modal Header -->
-                    <div class="modal-header">
-                        <h4 class="modal-title" id="M-title">Delete Topic</h4>
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    </div>
-                            <!-- Modal body -->
-                    <div class="modal-body">
-                        Are You Sure to Delete This Topic ?<br />
-                        <input name="title" type="text" value="" style="border: 0; width: 100%; max-width: 100%; height: 50px; background: white;" disabled />
-                    </div>
-                            <!-- Modal footer -->
-                            <div class="modal-footer">
-                                <button type="submit" class="btn btn-primary" value="Delete">Delete</button>
-                                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancle</button>
-                            </div>
-                }
-            </div>
-        </div>
-    </div>
-    @section Scripts{
-        <script>
-            $(".btnDelete").click(function () {
-                // Lay cai row hien tai dang chua btnDelete
-                let row = $(this).parents('tr');
-                // Lay title cua cai topic trong cai row nay
-                let title = $(row).find('.topic-title').text();
-                // Dua len modal (Thua! hoi bos di)
-                $('#myModal [name="title"]').val(title);
-            });
-
-            $('#myModal form').on('submit', function () {
-                $('[name="title"').prop('disabled', false);
-                window.location.reload();
-            });
-        </script>
-    }*@
-@*day la phan them moi vao luc 17h50' ngay 17/07*@
 
 
 
