--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/_PartialDelete.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/_PartialDelete.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Dr4rum_eProjectIII.Models.Topic
-    <div class="modal-header">
-        <h3 class="modal- title">Are you sure you want to delete this?</h3>
+    <div class="modal-header alert alert-success">
+        <h4 class="modal- title">Are you sure to delete this topic ?</h4>
         <button type="button" class="close" data-dismiss="modal" ariahidden="true">×</button>
     </div>
     @using (@Html.BeginForm())
@@ -11,22 +11,22 @@
                     <div class="form-horizontal">
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group">
-                            <div class="col-sm-12">Topic Title</div>
+                            <div class="col-sm-12 TopicDelete-title ">Topic Title</div>
                             <div class="col-sm-12">
-                                @Html.TextBoxFor(model => model.Topic_Title, new { @class = "formcontrol required", @disabled = "disabled" })
+                                @Html.TextBoxFor(model => model.Topic_Title, new { @class = "formcontrol required TopicDelete-formControl", @disabled = "disabled", @id = "TopicDelete-overflow" })
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-sm-12">Post By</div>
+                            <div class="col-sm-12 TopicDelete-title ">Post By</div>
                             <div class="col-sm-12">
-                                @Html.TextBoxFor(model => model.Account.UserName, new { @class = "formcontrol required", @disabled = "disabled" })
+                                @Html.TextBoxFor(model => model.Account.UserName, new { @class = "formcontrol required TopicDelete-formControl", @disabled = "disabled" })
                             </div>
                         </div>
                     </div>
                     <div class="modal-footer">
                         <input type="submit" id="btnDelete" ct_ma="@Model.Topic_Title" value="Delete"
-                               class="btn btn-default btn-primary" />
-                        <button class="btn btn-warning" data-dismiss="modal">Close</button>
+                               class="btn btn-default btn-danger" />
+                        <button class="btn btn-primary" data-dismiss="modal">Close</button>
                     </div>
            </div>
     }
