--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/Information.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/Information.cshtml
@@ -74,11 +74,11 @@
                 <span class="Avatar-Title"> Avatar: </span>
                 @if (accountItem.Avatar == null)
                 {
-                    <img src="~/Image/avatar/shutterstock_534491617-600.jpg" />
+                    <img style="width:200px" src="~/Image/avatar/shutterstock_534491617-600.jpg" />
                 }
                 else
                 {
-                   <img style="width:200px;" src="~/Image/avatar/@accountItem.Avatar"/>
+                   <img style="width:200px" src="~/Image/avatar/@accountItem.Avatar"/>
                 }
             </div>
         }
